# conwaymd

./: CHANGELOG.md  LICENSE  README.md  cmd.py  pyproject.toml  test_cmd.py
.github/workflows/: build.yml  publish.yml
cmd/: authorities.py  bases.py  cli.py  constants.py  core.py  employables.py  exceptions.py  idioms.py  placeholders.py  references.py  utilities.py
conwaymd/: authorities.py  bases.py  cli.py  constants.py  core.py  employables.py  exceptions.py  idioms.py  placeholders.py  references.py  utilities.py
tests/: old_test_cmd.py  test_authorities.py  test_cli.py  test_core.py  test_employables.py  test_idioms.py  test_placeholders.py  test_utilities.py
